tests/architecture/fixtures/fail/src/dialogos/ui/bad.py
from __future__ import annotations

from dialogos.domain.model import Turn

TURN = Turn()
